added form to url_new.  added function for random characters for short URL

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -13,12 +13,16 @@
 
 <body style="font-size:20px; padding:50px;">
   <!-- Add EJS code here -->
+  <% include ./partials/_header.ejs %>
+
+  <h2>My URLs</h2>
+
   <ul>
   <% for (prop in urls) { %>
-
     <li><a href="#"><%= `${prop}` %></a> : <%= `${urls[prop]}` %></li>
   <% } %>
   </ul>
+
 </body>
 
 </html>
