--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -1,2 +1,4 @@
-<%= longURL %> : <%= shortURL %>
-<p><a href="#">Click Here</a> to shorten a new URL!</p>
+<% include ./partials/_header.ejs %>
+
+<p>ShortURL for: <%= longURL %></p>
+<%= shortURL %>
