added updating URL button, and edit link on url show page

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -2,3 +2,7 @@
 
 <p>ShortURL for: <%= longURL %></p>
 <%= shortURL %>
+<form method="POST" action="/urls/<%= shortURL %>/update">
+  <input type="text" name="updateURL" placeholder="http://" />
+  <input type="submit" value="EDIT" />
+</form>
