--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,2 +1,14 @@
 <h1>Chris's URL Shortener</h1>
+<% if (username) { %>
+  <p>Oh, hey there <%= username %>!</p>
+  <form method="POST" action="/logout">
+    <input type="submit" value="LOGOUT" />
+  </form>
+<% } else { %>
+  <p>Hey!  Who is this?</p>
+  <form method="POST" action="/login">
+    <input type="text" name="username" placeholder="Enter your username" />
+    <input type="submit" value="SUBMIT" />
+  </form>
+<% } %>
 <p><a href="#">Click here</a> to create a new short URL!</p>
