--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,14 +1,10 @@
-<h1>Chris's URL Shortener</h1>
-<% if (username) { %>
-  <p>Oh, hey there <%= username %>!</p>
+<h1>Shorten R Us</h1>
+<% if (user_id) { %>
+  <p>Oh, hey there <%= user_id.username %>!</p>
   <form method="POST" action="/logout">
     <input type="submit" value="LOGOUT" />
   </form>
 <% } else { %>
-  <p>Hey!  Who is this?</p>
-  <form method="POST" action="/login">
-    <input type="text" name="username" placeholder="Enter your username" />
-    <input type="submit" value="SUBMIT" />
-  </form>
+  <p><a href="/login">Login </a> | <a href="/register">Register </a></p>
 <% } %>
-<p><a href="#">Click here</a> to create a new short URL!</p>
+<!-- <p><a href="#">Click here</a> to create a new short URL!</p> -->
