started basic header restyling

--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -8,8 +8,9 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/styles.css" type="text/css">
 
-  <title>New URL - Short and Sweet Example</title>
+  <title>Shorten R Us - New Url</title>
 </head>
 
 <body style="font-size:20px; padding:50px;">
