--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,10 +1,12 @@
-<h1>Shorten R Us</h1>
+<nav id="nav-main-container">
+<div id="appTitleContainer"><h1 class="appTitle" >Shorten R Us</h1></div>
 <% if (user_id) { %>
   <p>Oh, hey there <%= user_id.username %>!</p>
   <form method="POST" action="/logout">
     <input type="submit" value="LOGOUT" />
   </form>
 <% } else { %>
-  <p><a href="/login">Login </a> | <a href="/register">Register </a></p>
+  <p class="loginRegisterLink"><a href="/login">Login </a> | <a href="/register">Register </a></p>
 <% } %>
+</nav>
 <!-- <p><a href="#">Click here</a> to create a new short URL!</p> -->
