--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -1,4 +1,21 @@
-<% include ./partials/_header.ejs %>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+    integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/styles.css" type="text/css">
+
+  <title>Shorten R Us - Shortened URL</title>
+</head>
+
+<body style="font-size:20px; padding:50px;">
+
+  <% include partials/_header %>
 
 <p>ShortURL for: <%= longURL %></p>
 <%= shortURL %>
@@ -6,3 +23,4 @@
   <input type="text" name="updateURL" placeholder="http://" />
   <input type="submit" value="EDIT" />
 </form>
+</body>
