--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -1,28 +1,58 @@
 * {
   font-size: 10px;
-}
-
-body {
-  margin: 3rem;
+  margin: 0;
 }
 
 #nav-main-container {
 display: flex;
 align-items: center;
 justify-content: space-between;
+background-color: lightgrey;
+width: 100%;
+height: 15vh;
 
   .appTitle {
     font-size: 5rem;
+    margin-left: 4rem;
   }
 
-  .loginRegisterLink {
+  .loginRegisterContainer {
     font-size: 3rem;
+    margin-right: 4rem;
 
     a {
       font-size: 2rem;
       text-decoration: none;
+      color: black;
+    }
+
+    a:nth-child(1) {
+      padding-right: 1.5rem;
+    }
+
+    a:nth-child(2) {
+      margin-left: 1.5rem;
     }
   }
+}
 
+.loggedInNameContainer {
+  display: flex;
+  flex-direction: column;
+  margin-right: 4rem;
+  align-items: center;
+
+  p {
+    font-size: 3rem;
+  }
+
+  .logOutButtonContainer{
+    margin-top: 2rem;
+
+    .logOutButton {
+      width: 10rem;
+      font-size: 5rem;
+    }
+  }
 }
 
