--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -15,19 +15,18 @@
 <body>
   <!-- Add EJS code here -->
   <% include ./partials/_header.ejs %>
-  <div class="main-container">
-  <h2 class="page-title">My URLs</h2>
-
-  <ul>
-  <% for (let shortURL in urls) { %>
-    <li><a href="/u/<%= `${shortURL}` %>"><%= `${shortURL}` %></a> : <%= `${urls[shortURL].longURL}` %>
-      <button class="edit-button"><a href="/urls/<%= `${shortURL}` %>">EDIT</a></button>
-      <form method="POST" action="/urls/<%= `${shortURL}` %>/delete">
-        <input class="delete-button" type="submit" value="DELETE" />
-      </form>
-    </li>
-  <% } %>
-  </ul>
+  <div class="index-main-container page-main-container">
+    <h2 class="page-title">My URLs</h2>
+    <ul>
+    <% for (let shortURL in urls) { %>
+      <li><a href="/u/<%= `${shortURL}` %>"><%= `${shortURL}` %></a> : <%= `${urls[shortURL].longURL}` %>
+        <button class="edit-button"><a href="/urls/<%= `${shortURL}` %>">EDIT</a></button>
+        <form method="POST" action="/urls/<%= `${shortURL}` %>/delete">
+          <input class="delete-button" type="submit" value="DELETE" />
+        </form>
+      </li>
+    <% } %>
+    </ul>
   </div>
 </body>
 
