--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -10,7 +10,7 @@
     integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/styles.css" type="text/css">
 
-  <title>Shorten R Us - Shortened URL</title>
+  <title>Go Shorty - Shortened URL Info</title>
 </head>
 
 <body style="font-size:20px; padding:50px;">
