--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -349,13 +349,21 @@ template {
 }
 //========================================================
 
+// Variables
+// =============================================
+$blue-gradient: linear-gradient(to right,#2193b0, #6dd5ed);
 
 // CSS Starts Here
 // ===============================
 * {
   font-size: 10px;
   margin: 0;
-  font-family: sans-serif;
+  font-family: Avenir,Open Sans,Helvetica Neue,Arial,Helvetica,Verdana,sans-serif;
+  color: white;
+}
+
+body {
+  background-image: $blue-gradient;
 }
 
 // General styling
@@ -379,9 +387,10 @@ template {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: lightgrey;
+  background-color: none;
   width: 100%;
   height: 15vh;
+  border-bottom: 1px dashed black;
 
   .appTitle {
     font-size: 5rem;
@@ -407,7 +416,7 @@ template {
     margin-right: 4rem;
 
     a {
-      font-size: 2rem;
+      font-size: 3rem;
       text-decoration: none;
       color: black;
     }
@@ -434,13 +443,17 @@ template {
 
   .logOutButtonContainer{
     margin-top: 2rem;
+    background-color: #6dd5ed;
 
     .logOutButton {
       width: 12rem;
       height: 4.3rem;
       font-size: 2rem;
       border: 1px solid black;
-      border-radius: 4px;
+      border-radius: 10px;
+      color: #6dd5ed;
+      font-weight: bold;
+      box-shadow: -2px 3px 10px -5px black;
     }
   }
 }
@@ -448,12 +461,29 @@ template {
 // urls_index styling
 // =========================
 
-ul {
+.urls-container {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid grey;
+  width: 60%;
+  height: 50vh;
+  align-items: center;
+  background-color: white;
+  box-shadow: -7px 6px 30px 1px black;
+  margin-top: 10rem;
+
+  h2 {
+    margin-top: 2rem;
+    color: black;
+  }
+
+  ul {
   list-style-type: none;
 
   a, li {
     font-size: 3rem;
     text-decoration: none;
+    color: black;
   }
 
   li {
@@ -485,6 +515,9 @@ ul {
     }
   }
 }
+}
+
+
 
 // urls_login styles
 // ============================
@@ -493,48 +526,52 @@ ul {
   display: flex;
   justify-content: center;
   align-items: center;
-  // border: 1px solid red;
   height: 70vh;
 
-.full-login-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border: 1px solid black;
-  padding-top: 4rem;
-  width: 40vw;
-  height: 40vh;
-  top: -2rem;
-
-  h4 {
-    font-size: 3rem;
-    justify-self: flex-start;
-  }
-
-  .login-input-container {
+  .full-login-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    margin: auto;
+    border: 1px solid grey;
+    padding-top: 4rem;
+    width: 40vw;
+    height: 40vh;
+    top: -2rem;
+    background-color: white;
+    box-shadow: -7px 6px 30px 1px black;
 
-  .login-input {
-    height: 3rem;
-    font-size: 2rem;
-    margin: 1rem 1rem !important;
-  }
+    h4 {
+      font-size: 3rem;
+      justify-self: flex-start;
+      color: black;
+    }
 
-  .login-submit {
-    font-size: 2rem;
-    padding: 1rem;
-    border: 1px solid black;
-    border-radius: 4px;
-    background-color: lightblue;
-    width: 20rem;
-    margin-top: 2rem;
+    .login-input-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      margin: auto;
+
+      .login-input {
+        height: 4rem;
+        font-size: 2rem;
+        margin: 2rem 1rem !important;
+        color: black;
+        border: 1px solid black;
+      }
+
+      .login-submit {
+        font-size: 2rem;
+        padding: 1rem;
+        border: 1px solid black;
+        border-radius: 4px;
+        background-color: lightblue;
+        width: 20rem;
+        margin-top: 2rem;
+      }
+    }
   }
-}
-}
 }
 
 
