--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -4,19 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <!-- Bootstrap CSS -->
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-    integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous"> -->
   <link rel="stylesheet" href="/css/styles.css" type="text/css">
+  <link rel="stylesheet" href="/css/normalize.css" type="text/css">
   <title>Go Shorty - Login</title>
 </head>
 
 <body>
-
   <% include ./partials/_header %>
   <div class="login-main-container page-main-container" id="login-main-container">
-    <!-- <h3 class="page-title">Login!</h3> -->
     <form class="login-input-container" action="/login" method="POST">
       <div class="full-login-container">
         <h4>Enter your email and password to login</h4>
