--- a/views/urls_registration.ejs
+++ b/views/urls_registration.ejs
@@ -4,27 +4,26 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <!-- Bootstrap CSS -->
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-    integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous"> -->
   <link rel="stylesheet" href="/css/styles.css" type="text/css">
-  <title>Shorten R Us - Registration</title>
+  <link rel="stylesheet" href="/css/normalize.css" type="text/css">
+  <title>Go Shorty - Registration</title>
 </head>
 
-<!-- <body style="font-size:20px; padding:50px;"> -->
-
+<body>
   <% include ./partials/_header %>
-
-  <h3>Time to Register!</h3>
-  <form class="form-inline" action="/register" method="POST">
-    <div class="form-group mb-2">
-      <input class="form-control" type="text" name="username" placeholder="What is your name" style="width: 300px; margin: 1em" />
-      <input class="form-control" type="email" name="email" placeholder="Enter your email" style="width: 300px; margin: 1em" />
-      <input class="form-control" type="password" name="password" placeholder="Enter your password" style="width: 300px; margin: 1em" />
-      <input type="submit" value="submit" />
-    </div>
-  </form>
+  <div class="full-register-container login-main-container page-main-container" id="login-main-container">
+    <form class="login-input-container" action="/register" method="POST">
+      <div class="full-login-container">
+        <h4>Time to Register!</h4>
+        <div class="login-input-container">
+          <input class="login-input" type="text" name="username" placeholder="What is your name" style="width: 300px; margin: 1em" />
+          <input class="login-input" type="email" name="email" placeholder="Enter your email" style="width: 300px; margin: 1em" />
+          <input class="login-input" type="password" name="password" placeholder="Enter your password" style="width: 300px; margin: 1em" />
+          <input class="login-submit" type="submit" value="submit" />
+        </div>
+      </div>
+    </form>
+  </div>
 </body>
 
 </html>
