--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -189,3 +189,50 @@ h2 {
       margin-top: 2rem;
       color: white;
       font-weight: bold; }
+
+.short-url-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  border: 1px solid grey;
+  border-radius: 4px;
+  width: 40vw;
+  height: 40vh;
+  top: -2rem;
+  box-shadow: -7px 6px 30px 1px black; }
+  .short-url-container p {
+    color: black;
+    font-size: 3rem;
+    flex-wrap: wrap; }
+  .short-url-container .show-edit-tagline {
+    font-size: 2.5rem;
+    padding-top: 2rem; }
+  .short-url-container .shortURL-target {
+    font-weight: bold;
+    color: black;
+    font-size: 4rem; }
+  .short-url-container .longURL-target {
+    font-weight: bold;
+    color: black;
+    font-size: 3rem; }
+  .short-url-container .login-submit {
+    font-size: 2rem;
+    padding: 1rem;
+    border: 1px solid black;
+    border-radius: 4px;
+    background-color: #6dd5ed;
+    width: 10rem;
+    margin-top: 2rem;
+    color: white;
+    font-weight: bold; }
+  .short-url-container .login-input {
+    height: 4rem;
+    font-size: 2rem;
+    margin: 2rem 1rem !important;
+    color: black;
+    border: 1px solid black;
+    border-radius: 4px;
+    padding-left: 1rem;
+    width: 30rem; }
