--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -276,3 +276,66 @@ h2 {
 // ==============================
 
 // See urls_login for styling
+
+
+// urls_show styles
+// ===============================
+.short-url-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  border: 1px solid grey;
+  border-radius: 4px;
+  width: 40vw;
+  height: 40vh;
+  top: -2rem;
+  box-shadow: -7px 6px 30px 1px black;
+
+  p {
+    color: black;
+    font-size: 3rem;
+    flex-wrap: wrap;
+  }
+
+  .show-edit-tagline {
+    font-size: 2.5rem;
+    padding-top: 2rem;
+  }
+
+  .shortURL-target {
+    font-weight: bold;
+    color: black;
+    font-size: 4rem;
+  }
+
+  .longURL-target {
+    font-weight: bold;
+    color: black;
+    font-size: 3rem;
+  }
+
+  .login-submit {
+    font-size: 2rem;
+    padding: 1rem;
+    border: 1px solid black;
+    border-radius: 4px;
+    background-color: #6dd5ed;
+    width: 10rem;
+    margin-top: 2rem;
+    color: white;
+    font-weight: bold;
+  }
+
+  .login-input {
+    height: 4rem;
+    font-size: 2rem;
+    margin: 2rem 1rem !important;
+    color: black;
+    border: 1px solid black;
+    border-radius: 4px;
+    padding-left: 1rem;
+    width: 30rem;
+  }
+}
